--- a/settings.html
+++ b/settings.html
@@ -13,8 +13,11 @@
                     </div>
                     <div class="cs-header-meta">
                         <div class="cs-build-meta" role="status" aria-live="polite">
-                            <span class="cs-build-pill" id="os-build-version">Loading…</span>
-                            <span class="cs-build-note" id="os-build-note">Checking extension details…</span>
+                            <div class="cs-build-badges">
+                                <span class="cs-build-pill" id="os-build-version">Loading…</span>
+                                <span class="cs-experiment-badge">Experimental</span>
+                            </div>
+                            <span class="cs-build-note" id="os-build-note">Outfit Switcher is an early preview extension. Expect rough edges, limited functionality, and breaking changes as the system evolves.</span>
                         </div>
                         <div class="cs-header-controls">
                             <label class="cs-master-toggle">
